@@ -23,6 +23,7 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.Futures;
 import com.mojang.serialization.Codec;
@@ -54,22 +55,9 @@ import com.sk89q.worldedit.util.concurrency.LazyReference;
 import com.sk89q.worldedit.util.formatting.text.Component;
 import com.sk89q.worldedit.util.formatting.text.TranslatableComponent;
 import com.sk89q.worldedit.util.io.file.SafeFiles;
-import com.sk89q.worldedit.util.nbt.BinaryTag;
-import com.sk89q.worldedit.util.nbt.ByteArrayBinaryTag;
-import com.sk89q.worldedit.util.nbt.ByteBinaryTag;
-import com.sk89q.worldedit.util.nbt.CompoundBinaryTag;
-import com.sk89q.worldedit.util.nbt.DoubleBinaryTag;
-import com.sk89q.worldedit.util.nbt.EndBinaryTag;
-import com.sk89q.worldedit.util.nbt.FloatBinaryTag;
-import com.sk89q.worldedit.util.nbt.IntArrayBinaryTag;
-import com.sk89q.worldedit.util.nbt.IntBinaryTag;
-import com.sk89q.worldedit.util.nbt.ListBinaryTag;
-import com.sk89q.worldedit.util.nbt.LongArrayBinaryTag;
-import com.sk89q.worldedit.util.nbt.LongBinaryTag;
-import com.sk89q.worldedit.util.nbt.ShortBinaryTag;
-import com.sk89q.worldedit.util.nbt.StringBinaryTag;
 import com.sk89q.worldedit.world.DataFixer;
 import com.sk89q.worldedit.world.RegenOptions;
+import com.sk89q.worldedit.world.biome.BiomeCategory;
 import com.sk89q.worldedit.world.biome.BiomeType;
 import com.sk89q.worldedit.world.biome.BiomeTypes;
 import com.sk89q.worldedit.world.block.BaseBlock;
@@ -81,12 +69,13 @@ import com.sk89q.worldedit.world.item.ItemType;
 import net.minecraft.Util;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderSet;
+import net.minecraft.core.Registry;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.component.DataComponentPatch;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.NbtOps;
-import net.minecraft.nbt.Tag;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
 import net.minecraft.network.protocol.game.ClientboundEntityEventPacket;
 import net.minecraft.resources.ResourceKey;
@@ -97,6 +86,7 @@ import net.minecraft.server.level.ChunkResult;
 import net.minecraft.server.level.ServerChunkCache;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.progress.ChunkProgressListener;
+import net.minecraft.util.RandomSource;
 import net.minecraft.util.StringRepresentable;
 import net.minecraft.util.thread.BlockableEventLoop;
 import net.minecraft.world.Clearable;
@@ -127,6 +117,7 @@ import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.Vec3;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
+import org.bukkit.World;
 import org.bukkit.World.Environment;
 import org.bukkit.block.data.BlockData;
 import org.bukkit.craftbukkit.CraftServer;
@@ -139,9 +130,26 @@ import org.bukkit.craftbukkit.util.CraftMagicNumbers;
 import org.bukkit.entity.Player;
 import org.bukkit.event.entity.CreatureSpawnEvent.SpawnReason;
 import org.bukkit.generator.ChunkGenerator;
+import org.enginehub.linbus.common.LinTagId;
+import org.enginehub.linbus.tree.LinByteArrayTag;
+import org.enginehub.linbus.tree.LinByteTag;
+import org.enginehub.linbus.tree.LinCompoundTag;
+import org.enginehub.linbus.tree.LinDoubleTag;
+import org.enginehub.linbus.tree.LinEndTag;
+import org.enginehub.linbus.tree.LinFloatTag;
+import org.enginehub.linbus.tree.LinIntArrayTag;
+import org.enginehub.linbus.tree.LinIntTag;
+import org.enginehub.linbus.tree.LinListTag;
+import org.enginehub.linbus.tree.LinLongArrayTag;
+import org.enginehub.linbus.tree.LinLongTag;
+import org.enginehub.linbus.tree.LinShortTag;
+import org.enginehub.linbus.tree.LinStringTag;
+import org.enginehub.linbus.tree.LinTag;
+import org.enginehub.linbus.tree.LinTagType;
 import org.spigotmc.SpigotConfig;
 import org.spigotmc.WatchdogThread;
 
+import javax.annotation.Nullable;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -149,6 +157,7 @@ import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -163,7 +172,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import javax.annotation.Nullable;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
@@ -180,6 +188,8 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     private final Method getChunkFutureMethod;
     private final Field chunkProviderExecutorField;
     private final Watchdog watchdog;
+
+    private static final RandomSource random = RandomSource.create();
 
     // ------------------------------------------------------------------------
     // Code that may break between versions of Minecraft
@@ -198,13 +208,13 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         serverWorldsField.setAccessible(true);
 
         getChunkFutureMethod = ServerChunkCache.class.getDeclaredMethod(
-                Refraction.pickName("getChunkFutureMainThread", "c"),
-                int.class, int.class, ChunkStatus.class, boolean.class
+            Refraction.pickName("getChunkFutureMainThread", "c"),
+            int.class, int.class, ChunkStatus.class, boolean.class
         );
         getChunkFutureMethod.setAccessible(true);
 
         chunkProviderExecutorField = ServerChunkCache.class.getDeclaredField(
-                Refraction.pickName("mainThreadProcessor", "g")
+            Refraction.pickName("mainThreadProcessor", "g")
         );
         chunkProviderExecutorField.setAccessible(true);
 
@@ -239,7 +249,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      * Read the given NBT data into the given tile entity.
      *
      * @param tileEntity the tile entity
-     * @param tag        the tag
+     * @param tag the tag
      */
     static void readTagIntoTileEntity(net.minecraft.nbt.CompoundTag tag, BlockEntity tileEntity) {
         tileEntity.loadWithComponents(tag, MinecraftServer.getServer().registryAccess());
@@ -259,7 +269,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     /**
      * Create an entity using the given entity ID.
      *
-     * @param id    the entity ID
+     * @param id the entity ID
      * @param world the world
      * @return an entity or null
      */
@@ -272,7 +282,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      * Write the given NBT data into the given entity.
      *
      * @param entity the entity
-     * @param tag    the tag
+     * @param tag the tag
      */
     private static void readTagIntoEntity(net.minecraft.nbt.CompoundTag tag, Entity entity) {
         entity.load(tag);
@@ -282,21 +292,18 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      * Write the entity's NBT data to the given tag.
      *
      * @param entity the entity
-     * @param tag    the tag
+     * @param tag the tag
      */
     private static void readEntityIntoTag(Entity entity, net.minecraft.nbt.CompoundTag tag) {
         entity.save(tag);
     }
 
     private static Block getBlockFromType(BlockType blockType) {
-
-        return DedicatedServer.getServer().registryAccess().registryOrThrow(Registries.BLOCK).get(ResourceLocation.tryParse(
-                blockType.id()));
+        return DedicatedServer.getServer().registryAccess().registryOrThrow(Registries.BLOCK).get(ResourceLocation.tryParse(blockType.id()));
     }
 
     private static Item getItemFromType(ItemType itemType) {
-        return DedicatedServer.getServer().registryAccess().registryOrThrow(Registries.ITEM).get(ResourceLocation.tryParse(
-                itemType.id()));
+        return DedicatedServer.getServer().registryAccess().registryOrThrow(Registries.ITEM).get(ResourceLocation.tryParse(itemType.id()));
     }
 
     @Override
@@ -327,12 +334,16 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     public BiomeType adapt(Biome biome) {
-        var mcBiome = ((CraftServer) Bukkit.getServer()).getServer().registryAccess().registryOrThrow(Registries.BIOME).getKey(
-                biome);
+        var mcBiome = ((CraftServer) Bukkit.getServer()).getServer().registryAccess().registryOrThrow(Registries.BIOME).getKey(biome);
         if (mcBiome == null) {
             return null;
         }
         return BiomeType.REGISTRY.get(mcBiome.toString());
+    }
+
+    public net.minecraft.world.level.block.state.BlockState adapt(BlockState blockState) {
+        int internalId = BlockStateIdAccess.getBlockStateId(blockState);
+        return Block.stateById(internalId);
     }
 
     @Override
@@ -348,14 +359,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         LevelChunk chunk = handle.getChunk(x >> 4, z >> 4);
         final BlockPos blockPos = new BlockPos(x, y, z);
         final net.minecraft.world.level.block.state.BlockState blockData = chunk.getBlockState(blockPos);
-        int internalId = Block.getId(blockData);
-        BlockState state = BlockStateIdAccess.getBlockStateById(internalId);
-        if (state == null) {
-            org.bukkit.block.Block bukkitBlock = location.getBlock();
-            state = BukkitAdapter.adapt(bukkitBlock.getBlockData());
-        }
-
-        return state;
+        return adapt(blockData);
     }
 
     @Override
@@ -375,7 +379,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         BlockEntity te = chunk.getBlockEntity(blockPos);
         if (te != null) {
             net.minecraft.nbt.CompoundTag tag = te.saveWithId(MinecraftServer.getServer().registryAccess());
-            return state.toBaseBlock((CompoundBinaryTag) toNativeBinary(tag));
+            return state.toBaseBlock((LinCompoundTag) toNativeLin(tag));
         }
 
         return state.toBaseBlock();
@@ -385,7 +389,38 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     private static final HashMap<Holder<Biome>, BiomeType> biomeTypeFromNMSCache = new HashMap<>();
 
     @Override
-    public WorldNativeAccess<?, ?, ?> createWorldNativeAccess(org.bukkit.World world) {
+    public BiomeType getBiome(Location location) {
+        checkNotNull(location);
+
+        CraftWorld craftWorld = ((CraftWorld) location.getWorld());
+        int x = location.getBlockX();
+        int y = location.getBlockY();
+        int z = location.getBlockZ();
+
+        final ServerLevel handle = craftWorld.getHandle();
+        LevelChunk chunk = handle.getChunk(x >> 4, z >> 4);
+
+        return biomeTypeFromNMSCache.computeIfAbsent(chunk.getNoiseBiome(x >> 2, y >> 2, z >> 2), b -> BiomeType.REGISTRY.get(b.unwrapKey().get().location().toString()));
+    }
+
+    @Override
+    public void setBiome(Location location, BiomeType biome) {
+        checkNotNull(location);
+        checkNotNull(biome);
+
+        CraftWorld craftWorld = ((CraftWorld) location.getWorld());
+        int x = location.getBlockX();
+        int y = location.getBlockY();
+        int z = location.getBlockZ();
+
+        final ServerLevel handle = craftWorld.getHandle();
+        LevelChunk chunk = handle.getChunk(x >> 4, z >> 4);
+        chunk.setBiome(x >> 2, y >> 2, z >> 2, biomeTypeToNMSCache.computeIfAbsent(biome, b -> ((CraftServer) Bukkit.getServer()).getServer().registryAccess().registryOrThrow(Registries.BIOME).getHolderOrThrow(ResourceKey.create(Registries.BIOME, new ResourceLocation(b.id())))));
+        chunk.setUnsaved(true);
+    }
+
+    @Override
+    public WorldNativeAccess<?, ?, ?> createWorldNativeAccess(World world) {
         return new PaperweightWorldNativeAccess(this, new WeakReference<>(((CraftWorld) world).getHandle()));
     }
 
@@ -409,13 +444,13 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
 
     @SuppressWarnings({"rawtypes", "unchecked"})
     private net.minecraft.world.level.block.state.BlockState applyProperties(
-            StateDefinition<Block, net.minecraft.world.level.block.state.BlockState> stateContainer,
-            net.minecraft.world.level.block.state.BlockState newState,
-            Map<Property<?>, Object> states
+        StateDefinition<Block, net.minecraft.world.level.block.state.BlockState> stateContainer,
+        net.minecraft.world.level.block.state.BlockState newState,
+        Map<Property<?>, Object> states
     ) {
         for (Map.Entry<Property<?>, Object> state : states.entrySet()) {
             net.minecraft.world.level.block.state.properties.Property<?> property =
-                    stateContainer.getProperty(state.getKey().getName());
+                stateContainer.getProperty(state.getKey().getName());
             Comparable<?> value = (Comparable) state.getValue();
             // we may need to adapt this value, depending on the source prop
             if (property instanceof DirectionProperty) {
@@ -424,16 +459,16 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
             } else if (property instanceof net.minecraft.world.level.block.state.properties.EnumProperty) {
                 String enumName = (String) value;
                 value = ((net.minecraft.world.level.block.state.properties.EnumProperty<?>) property)
-                        .getValue(enumName).orElseThrow(() ->
-                                new IllegalStateException(
-                                        "Enum property " + property.getName() + " does not contain " + enumName
-                                )
-                        );
+                    .getValue(enumName).orElseThrow(() ->
+                        new IllegalStateException(
+                            "Enum property " + property.getName() + " does not contain " + enumName
+                        )
+                    );
             }
 
             newState = newState.setValue(
-                    (net.minecraft.world.level.block.state.properties.Property) property,
-                    (Comparable) value
+                (net.minecraft.world.level.block.state.properties.Property) property,
+                (Comparable) value
             );
         }
         return newState;
@@ -457,7 +492,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         readEntityIntoTag(mcEntity, tag);
         return new BaseEntity(
                 com.sk89q.worldedit.world.entity.EntityTypes.get(id),
-                LazyReference.from(() -> (CompoundBinaryTag) toNativeBinary(tag))
+                LazyReference.from(() -> (LinCompoundTag) toNativeLin(tag))
         );
     }
 
@@ -473,9 +508,9 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         Entity createdEntity = createEntityFromId(state.getType().id(), craftWorld.getHandle());
 
         if (createdEntity != null) {
-            CompoundBinaryTag nativeTag = state.getNbt();
+            LinCompoundTag nativeTag = state.getNbt();
             if (nativeTag != null) {
-                net.minecraft.nbt.CompoundTag tag = (net.minecraft.nbt.CompoundTag) fromNativeBinary(nativeTag);
+                net.minecraft.nbt.CompoundTag tag = (net.minecraft.nbt.CompoundTag) fromNativeLin(nativeTag);
                 for (String name : Constants.NO_COPY_ENTITY_NBT_FIELDS) {
                     tag.remove(name);
                 }
@@ -484,7 +519,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
 
             createdEntity.absMoveTo(location.getX(), location.getY(), location.getZ(), location.getYaw(), location.getPitch());
 
-            worldServer.addFreshEntity(createdEntity, SpawnReason.CUSTOM);
+            worldServer.addFreshEntityWithPassengers(createdEntity, SpawnReason.CUSTOM);
             return createdEntity.getBukkitEntity();
         } else {
             return null;
@@ -525,30 +560,30 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     @SuppressWarnings({"unchecked", "rawtypes"})
     private static final LoadingCache<net.minecraft.world.level.block.state.properties.Property, Property<?>> PROPERTY_CACHE = CacheBuilder
             .newBuilder()
-            .build(new CacheLoader<net.minecraft.world.level.block.state.properties.Property, Property<?>>() {
+            .build(new CacheLoader<>() {
                 @Override
-                public Property<?> load(net.minecraft.world.level.block.state.properties.Property state) throws Exception {
+                public Property<?> load(net.minecraft.world.level.block.state.properties.Property state) {
                     if (state instanceof net.minecraft.world.level.block.state.properties.BooleanProperty) {
                         return new BooleanProperty(state.getName(), ImmutableList.copyOf(state.getPossibleValues()));
                     } else if (state instanceof DirectionProperty) {
                         return new DirectionalProperty(
                                 state.getName(),
-                                (List<Direction>) state
+                                new ArrayList<>((List<Direction>) state
                                         .getPossibleValues()
                                         .stream()
                                         .map(e -> Direction.valueOf(((StringRepresentable) e)
                                                 .getSerializedName()
                                                 .toUpperCase(Locale.ROOT)))
-                                        .collect(Collectors.toList())
+                                        .toList())
                         );
                     } else if (state instanceof net.minecraft.world.level.block.state.properties.EnumProperty) {
                         return new EnumProperty(
                                 state.getName(),
-                                (List<String>) state
+                                new ArrayList<>((List<String>) state
                                         .getPossibleValues()
                                         .stream()
                                         .map(e -> ((StringRepresentable) e).getSerializedName())
-                                        .collect(Collectors.toList())
+                                        .toList())
                         );
                     } else if (state instanceof net.minecraft.world.level.block.state.properties.IntegerProperty) {
                         return new IntegerProperty(state.getName(), ImmutableList.copyOf(state.getPossibleValues()));
@@ -560,13 +595,13 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
                 }
             });
 
-    @SuppressWarnings({"rawtypes"})
+    @SuppressWarnings({ "rawtypes" })
     @Override
     public Map<String, ? extends Property<?>> getProperties(BlockType blockType) {
         Map<String, Property<?>> properties = new TreeMap<>();
         Block block = getBlockFromType(blockType);
         StateDefinition<Block, net.minecraft.world.level.block.state.BlockState> blockStateList =
-                block.getStateDefinition();
+            block.getStateDefinition();
         for (net.minecraft.world.level.block.state.properties.Property state : blockStateList.getProperties()) {
             Property<?> property = PROPERTY_CACHE.getUnchecked(state);
             properties.put(property.getName(), property);
@@ -575,33 +610,33 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     @Override
-    public void sendFakeNBT(Player player, BlockVector3 pos, CompoundBinaryTag nbtData) {
+    public void sendFakeNBT(Player player, BlockVector3 pos, LinCompoundTag nbtData) {
         var structureBlock = new StructureBlockEntity(
-                new BlockPos(pos.x(), pos.y(), pos.z()),
-                Blocks.STRUCTURE_BLOCK.defaultBlockState()
+            new BlockPos(pos.x(), pos.y(), pos.z()),
+            Blocks.STRUCTURE_BLOCK.defaultBlockState()
         );
         structureBlock.setLevel(((CraftPlayer) player).getHandle().level());
         ((CraftPlayer) player).getHandle().connection.send(ClientboundBlockEntityDataPacket.create(
                 structureBlock,
-                (blockEntity, registryAccess) -> (net.minecraft.nbt.CompoundTag) fromNativeBinary(nbtData)
+                (blockEntity, registryAccess) -> (net.minecraft.nbt.CompoundTag) fromNativeLin(nbtData)
         ));
     }
 
     @Override
     public void sendFakeOP(Player player) {
         ((CraftPlayer) player).getHandle().connection.send(new ClientboundEntityEventPacket(
-                ((CraftPlayer) player).getHandle(), (byte) 28
+            ((CraftPlayer) player).getHandle(), (byte) 28
         ));
     }
 
     @Override
-    public org.bukkit.inventory.ItemStack adapt(BaseItemStack item) {
+    public org.bukkit.inventory.ItemStack adapt(BaseItemStack baseItemStack) {
         final RegistryAccess.Frozen registryAccess = DedicatedServer.getServer().registryAccess();
         ItemStack stack = new ItemStack(
-                registryAccess.registryOrThrow(Registries.ITEM).get(ResourceLocation.tryParse(item.getType().id())),
-                item.getAmount()
+            registryAccess.registryOrThrow(Registries.ITEM).get(ResourceLocation.tryParse(baseItemStack.getType().id())),
+            baseItemStack.getAmount()
         );
-        final CompoundTag nbt = (net.minecraft.nbt.CompoundTag) fromNative(item.getNbtData());
+        final CompoundTag nbt = (net.minecraft.nbt.CompoundTag) fromNative(baseItemStack.getNbtData());
         final DataComponentPatch patch = COMPONENTS_CODEC
                 .parse(registryAccess.createSerializationContext(NbtOps.INSTANCE), nbt)
                 .getOrThrow();
@@ -611,30 +646,30 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
 
     @Override
     public BaseItemStack adapt(org.bukkit.inventory.ItemStack itemStack) {
-        final RegistryAccess.Frozen registryAccess = DedicatedServer.getServer().registryAccess();
+        var registryAccess = DedicatedServer.getServer().registryAccess();
         final ItemStack nmsStack = CraftItemStack.asNMSCopy(itemStack);
-        final Tag tag = COMPONENTS_CODEC.encodeStart(
-                registryAccess.createSerializationContext(NbtOps.INSTANCE),
-                nmsStack.getComponentsPatch()
+        CompoundTag tag = (CompoundTag) COMPONENTS_CODEC.encodeStart(
+            registryAccess.createSerializationContext(NbtOps.INSTANCE),
+            nmsStack.getComponentsPatch()
         ).getOrThrow();
         return new BaseItemStack(
                 BukkitAdapter.asItemType(itemStack.getType()),
-                LazyReference.from(() -> (CompoundBinaryTag) toNativeBinary(tag)),
+                LazyReference.from(() -> (LinCompoundTag) toNativeLin(tag)),
                 itemStack.getAmount()
         );
     }
 
     private final LoadingCache<ServerLevel, PaperweightFakePlayer> fakePlayers
-            = CacheBuilder.newBuilder().weakKeys().softValues().build(CacheLoader.from(PaperweightFakePlayer::new));
+        = CacheBuilder.newBuilder().weakKeys().softValues().build(CacheLoader.from(PaperweightFakePlayer::new));
 
     @Override
-    public boolean simulateItemUse(org.bukkit.World world, BlockVector3 position, BaseItem item, Direction face) {
+    public boolean simulateItemUse(World world, BlockVector3 position, BaseItem item, Direction face) {
         CraftWorld craftWorld = (CraftWorld) world;
         ServerLevel worldServer = craftWorld.getHandle();
         ItemStack stack = CraftItemStack.asNMSCopy(adapt(
-                item instanceof BaseItemStack
-                        ? ((BaseItemStack) item)
-                        : new BaseItemStack(item.getType(), item.getNbtReference(), 1)
+            item instanceof BaseItemStack
+                ? ((BaseItemStack) item)
+                : new BaseItemStack(item.getType(), item.getNbtReference(), 1)
         ));
 
         PaperweightFakePlayer fakePlayer;
@@ -645,8 +680,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         }
         fakePlayer.setItemInHand(InteractionHand.MAIN_HAND, stack);
         fakePlayer.absMoveTo(position.x(), position.y(), position.z(),
-                (float) face.toVector().toYaw(), (float) face.toVector().toPitch()
-        );
+            (float) face.toVector().toYaw(), (float) face.toVector().toPitch());
 
         final BlockPos blockPos = new BlockPos(position.x(), position.y(), position.z());
         final Vec3 blockVec = Vec3.atLowerCornerOf(blockPos);
@@ -655,10 +689,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         UseOnContext context = new UseOnContext(fakePlayer, InteractionHand.MAIN_HAND, rayTrace);
         InteractionResult result = stack.useOn(context);
         if (result != InteractionResult.SUCCESS) {
-            if (worldServer
-                    .getBlockState(blockPos)
-                    .useItemOn(stack, worldServer, fakePlayer, InteractionHand.MAIN_HAND, rayTrace)
-                    .consumesAction()) {
+            if (worldServer.getBlockState(blockPos).useItemOn(stack, worldServer, fakePlayer, InteractionHand.MAIN_HAND, rayTrace).consumesAction()) {
                 result = InteractionResult.SUCCESS;
             } else {
                 result = stack.getItem().use(worldServer, fakePlayer, InteractionHand.MAIN_HAND).getResult();
@@ -669,17 +700,14 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     @Override
-    public boolean canPlaceAt(org.bukkit.World world, BlockVector3 position, BlockState blockState) {
+    public boolean canPlaceAt(World world, BlockVector3 position, BlockState blockState) {
         int internalId = BlockStateIdAccess.getBlockStateId(blockState);
         net.minecraft.world.level.block.state.BlockState blockData = Block.stateById(internalId);
-        return blockData.canSurvive(
-                ((CraftWorld) world).getHandle(),
-                new BlockPos(position.x(), position.y(), position.z())
-        );
+        return blockData.canSurvive(((CraftWorld) world).getHandle(), new BlockPos(position.x(), position.y(), position.z()));
     }
 
     @Override
-    public boolean regenerate(org.bukkit.World bukkitWorld, Region region, Extent extent, RegenOptions options) {
+    public boolean regenerate(World bukkitWorld, Region region, Extent extent, RegenOptions options) {
         try {
             doRegen(bukkitWorld, region, extent, options);
         } catch (Exception e) {
@@ -689,7 +717,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         return true;
     }
 
-    private void doRegen(org.bukkit.World bukkitWorld, Region region, Extent extent, RegenOptions options) throws Exception {
+    private void doRegen(World bukkitWorld, Region region, Extent extent, RegenOptions options) throws Exception {
         Environment env = bukkitWorld.getEnvironment();
         ChunkGenerator gen = bukkitWorld.getGenerator();
 
@@ -699,56 +727,52 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         try (LevelStorageSource.LevelStorageAccess session = levelStorage.createAccess("faweregentempworld", worldDimKey)) {
             ServerLevel originalWorld = ((CraftWorld) bukkitWorld).getHandle();
             PrimaryLevelData levelProperties = (PrimaryLevelData) originalWorld.getServer()
-                    .getWorldData().overworldData();
+                .getWorldData().overworldData();
             WorldOptions originalOpts = levelProperties.worldGenOptions();
 
             long seed = options.getSeed().orElse(originalWorld.getSeed());
             WorldOptions newOpts = options.getSeed().isPresent()
-                    ? originalOpts.withSeed(OptionalLong.of(seed))
-                    : originalOpts;
+                ? originalOpts.withSeed(OptionalLong.of(seed))
+                : originalOpts;
 
             LevelSettings newWorldSettings = new LevelSettings(
-                    "faweregentempworld",
-                    levelProperties.settings.gameType(),
-                    levelProperties.settings.hardcore(),
-                    levelProperties.settings.difficulty(),
-                    levelProperties.settings.allowCommands(),
-                    levelProperties.settings.gameRules(),
-                    levelProperties.settings.getDataConfiguration()
+                "faweregentempworld",
+                levelProperties.settings.gameType(),
+                levelProperties.settings.hardcore(),
+                levelProperties.settings.difficulty(),
+                levelProperties.settings.allowCommands(),
+                levelProperties.settings.gameRules(),
+                levelProperties.settings.getDataConfiguration()
             );
 
+            @SuppressWarnings("deprecation")
             PrimaryLevelData.SpecialWorldProperty specialWorldProperty =
-                    levelProperties.isFlatWorld()
-                            ? PrimaryLevelData.SpecialWorldProperty.FLAT
-                            : levelProperties.isDebugWorld()
-                                    ? PrimaryLevelData.SpecialWorldProperty.DEBUG
-                                    : PrimaryLevelData.SpecialWorldProperty.NONE;
+                levelProperties.isFlatWorld()
+                    ? PrimaryLevelData.SpecialWorldProperty.FLAT
+                    : levelProperties.isDebugWorld()
+                    ? PrimaryLevelData.SpecialWorldProperty.DEBUG
+                    : PrimaryLevelData.SpecialWorldProperty.NONE;
 
-            PrimaryLevelData newWorldData = new PrimaryLevelData(
-                    newWorldSettings,
-                    newOpts,
-                    specialWorldProperty,
-                    Lifecycle.stable()
-            );
+            PrimaryLevelData newWorldData = new PrimaryLevelData(newWorldSettings, newOpts, specialWorldProperty, Lifecycle.stable());
 
             ServerLevel freshWorld = new ServerLevel(
-                    originalWorld.getServer(),
-                    originalWorld.getServer().executor,
-                    session, newWorldData,
-                    originalWorld.dimension(),
-                    new LevelStem(
-                            originalWorld.dimensionTypeRegistration(),
-                            originalWorld.getChunkSource().getGenerator()
-                    ),
-                    new NoOpWorldLoadListener(),
-                    originalWorld.isDebug(),
-                    seed,
-                    ImmutableList.of(),
-                    false,
-                    originalWorld.getRandomSequences(),
-                    env,
-                    gen,
-                    bukkitWorld.getBiomeProvider()
+                originalWorld.getServer(),
+                originalWorld.getServer().executor,
+                session, newWorldData,
+                originalWorld.dimension(),
+                new LevelStem(
+                    originalWorld.dimensionTypeRegistration(),
+                    originalWorld.getChunkSource().getGenerator()
+                ),
+                new NoOpWorldLoadListener(),
+                originalWorld.isDebug(),
+                seed,
+                ImmutableList.of(),
+                false,
+                originalWorld.getRandomSequences(),
+                env,
+                gen,
+                bukkitWorld.getBiomeProvider()
             );
             try {
                 regenForWorld(region, extent, freshWorld, options);
@@ -758,7 +782,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         } finally {
             try {
                 @SuppressWarnings("unchecked")
-                Map<String, org.bukkit.World> map = (Map<String, org.bukkit.World>) serverWorldsField.get(Bukkit.getServer());
+                Map<String, World> map = (Map<String, World>) serverWorldsField.get(Bukkit.getServer());
                 map.remove("faweregentempworld");
             } catch (IllegalAccessException ignored) {
             }
@@ -775,8 +799,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     @SuppressWarnings("unchecked")
-    private void regenForWorld(Region region, Extent extent, ServerLevel serverWorld, RegenOptions options) throws
-            WorldEditException {
+    private void regenForWorld(Region region, Extent extent, ServerLevel serverWorld, RegenOptions options) throws WorldEditException {
         List<CompletableFuture<ChunkAccess>> chunkLoadings = submitChunkLoadTasks(region, serverWorld);
         BlockableEventLoop<Runnable> executor;
         try {
@@ -787,7 +810,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         executor.managedBlock(() -> {
             // bail out early if a future fails
             if (chunkLoadings.stream().anyMatch(ftr ->
-                    ftr.isDone() && Futures.getUnchecked(ftr) == null
+                ftr.isDone() && Futures.getUnchecked(ftr) == null
             )) {
                 return false;
             }
@@ -811,7 +834,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
             BlockEntity blockEntity = chunk.getBlockEntity(pos);
             if (blockEntity != null) {
                 net.minecraft.nbt.CompoundTag tag = blockEntity.saveWithId(serverWorld.registryAccess());
-                state = state.toBaseBlock(((CompoundBinaryTag) toNativeBinary(tag)));
+                state = state.toBaseBlock(((LinCompoundTag) toNativeLin(tag)));
             }
             extent.setBlock(vec, state.toBaseBlock());
             if (options.shouldRegenBiomes()) {
@@ -833,9 +856,9 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
             try {
                 //noinspection unchecked
                 chunkLoadings.add(
-                        ((CompletableFuture<ChunkResult<ChunkAccess>>)
-                                getChunkFutureMethod.invoke(chunkManager, chunk.x(), chunk.z(), ChunkStatus.FEATURES, true))
-                                .thenApply(either -> either.orElse(null))
+                    ((CompletableFuture<ChunkResult<ChunkAccess>>)
+                        getChunkFutureMethod.invoke(chunkManager, chunk.x(), chunk.z(), ChunkStatus.FEATURES, true))
+                        .thenApply(either -> either.orElse(null))
                 );
             } catch (IllegalAccessException | InvocationTargetException e) {
                 throw new IllegalStateException("Couldn't load chunk for regen.", e);
@@ -857,12 +880,12 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     private static final Set<SideEffect> SUPPORTED_SIDE_EFFECTS = Sets.immutableEnumSet(
-            SideEffect.NEIGHBORS,
-            SideEffect.LIGHTING,
-            SideEffect.VALIDATION,
-            SideEffect.ENTITY_AI,
-            SideEffect.EVENTS,
-            SideEffect.UPDATE
+        SideEffect.NEIGHBORS,
+        SideEffect.LIGHTING,
+        SideEffect.VALIDATION,
+        SideEffect.ENTITY_AI,
+        SideEffect.EVENTS,
+        SideEffect.UPDATE
     );
 
     @Override
@@ -871,7 +894,7 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     @Override
-    public boolean clearContainerBlockContents(org.bukkit.World world, BlockVector3 pt) {
+    public boolean clearContainerBlockContents(World world, BlockVector3 pt) {
         ServerLevel originalWorld = ((CraftWorld) world).getHandle();
 
         BlockEntity entity = originalWorld.getBlockEntity(new BlockPos(pt.x(), pt.y(), pt.z()));
@@ -880,6 +903,45 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
             return true;
         }
         return false;
+    }
+
+    @Override
+    public void initializeRegistries() {
+        DedicatedServer server = ((CraftServer) Bukkit.getServer()).getServer();
+        // Biomes
+        for (ResourceLocation name : server.registryAccess().registryOrThrow(Registries.BIOME).keySet()) {
+            if (BiomeType.REGISTRY.get(name.toString()) == null) {
+                BiomeType.REGISTRY.register(name.toString(), new BiomeType(name.toString()));
+            }
+        }
+
+        // BiomeCategories
+        Registry<Biome> biomeRegistry = server.registryAccess().registryOrThrow(Registries.BIOME);
+        biomeRegistry.getTagNames().forEach(tagKey -> {
+            String key = tagKey.location().toString();
+            if (BiomeCategory.REGISTRY.get(key) == null) {
+                BiomeCategory.REGISTRY.register(key, new BiomeCategory(
+                    key,
+                    () -> biomeRegistry.getTag(tagKey)
+                        .stream()
+                        .flatMap(HolderSet.Named::stream)
+                        .map(Holder::value)
+                        .map(this::adapt)
+                        .collect(Collectors.toSet()))
+                );
+            }
+        });
+    }
+
+    @Override
+    public void sendBiomeUpdates(World world, Iterable<BlockVector2> chunks) {
+        ServerLevel originalWorld = ((CraftWorld) world).getHandle();
+
+        List<ChunkAccess> nativeChunks = chunks instanceof Collection<BlockVector2> chunkCollection ? Lists.newArrayListWithCapacity(chunkCollection.size()) : Lists.newArrayList();
+        for (BlockVector2 chunk : chunks) {
+            nativeChunks.add(originalWorld.getChunk(chunk.x(), chunk.z(), ChunkStatus.BIOMES, false));
+        }
+        originalWorld.getChunkSource().chunkMap.resendBiomesForChunks(nativeChunks);
     }
 
     // ------------------------------------------------------------------------
@@ -894,51 +956,49 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      * @return native WorldEdit NBT structure
      */
     @Override
-    public BinaryTag toNativeBinary(net.minecraft.nbt.Tag foreign) {
+    public LinTag<?> toNativeLin(net.minecraft.nbt.Tag foreign) {
         if (foreign == null) {
             return null;
         }
         if (foreign instanceof net.minecraft.nbt.CompoundTag) {
-            Map<String, BinaryTag> values = new HashMap<>();
+            Map<String, LinTag<?>> values = new HashMap<>();
             Set<String> foreignKeys = ((net.minecraft.nbt.CompoundTag) foreign).getAllKeys();
 
             for (String str : foreignKeys) {
                 net.minecraft.nbt.Tag base = ((net.minecraft.nbt.CompoundTag) foreign).get(str);
-                values.put(str, toNativeBinary(base));
+                values.put(str, toNativeLin(base));
             }
-            return CompoundBinaryTag.from(values);
+            return LinCompoundTag.of(values);
         } else if (foreign instanceof net.minecraft.nbt.ByteTag) {
-            return ByteBinaryTag.of(((net.minecraft.nbt.ByteTag) foreign).getAsByte());
+            return LinByteTag.of(((net.minecraft.nbt.ByteTag) foreign).getAsByte());
         } else if (foreign instanceof net.minecraft.nbt.ByteArrayTag) {
-            return ByteArrayBinaryTag.of(((net.minecraft.nbt.ByteArrayTag) foreign).getAsByteArray());
+            return LinByteArrayTag.of(((net.minecraft.nbt.ByteArrayTag) foreign).getAsByteArray());
         } else if (foreign instanceof net.minecraft.nbt.DoubleTag) {
-            return DoubleBinaryTag.of(((net.minecraft.nbt.DoubleTag) foreign).getAsDouble());
+            return LinDoubleTag.of(((net.minecraft.nbt.DoubleTag) foreign).getAsDouble());
         } else if (foreign instanceof net.minecraft.nbt.FloatTag) {
-            return FloatBinaryTag.of(((net.minecraft.nbt.FloatTag) foreign).getAsFloat());
+            return LinFloatTag.of(((net.minecraft.nbt.FloatTag) foreign).getAsFloat());
         } else if (foreign instanceof net.minecraft.nbt.IntTag) {
-            return IntBinaryTag.of(((net.minecraft.nbt.IntTag) foreign).getAsInt());
+            return LinIntTag.of(((net.minecraft.nbt.IntTag) foreign).getAsInt());
         } else if (foreign instanceof net.minecraft.nbt.IntArrayTag) {
-            return IntArrayBinaryTag.of(((net.minecraft.nbt.IntArrayTag) foreign).getAsIntArray());
+            return  LinIntArrayTag.of(((net.minecraft.nbt.IntArrayTag) foreign).getAsIntArray());
         } else if (foreign instanceof net.minecraft.nbt.LongArrayTag) {
-            return LongArrayBinaryTag.of(((net.minecraft.nbt.LongArrayTag) foreign).getAsLongArray());
+            return LinLongArrayTag.of(((net.minecraft.nbt.LongArrayTag) foreign).getAsLongArray());
         } else if (foreign instanceof net.minecraft.nbt.ListTag) {
             try {
-                return toNativeList((net.minecraft.nbt.ListTag) foreign);
+                return toNativeLinList((net.minecraft.nbt.ListTag) foreign);
             } catch (Throwable e) {
                 logger.log(Level.WARNING, "Failed to convert net.minecraft.nbt.ListTag", e);
-                return ListBinaryTag.empty();
             }
         } else if (foreign instanceof net.minecraft.nbt.LongTag) {
-            return LongBinaryTag.of(((net.minecraft.nbt.LongTag) foreign).getAsLong());
+            return LinLongTag.of(((net.minecraft.nbt.LongTag) foreign).getAsLong());
         } else if (foreign instanceof net.minecraft.nbt.ShortTag) {
-            return ShortBinaryTag.of(((net.minecraft.nbt.ShortTag) foreign).getAsShort());
+            return LinShortTag.of(((net.minecraft.nbt.ShortTag) foreign).getAsShort());
         } else if (foreign instanceof net.minecraft.nbt.StringTag) {
-            return StringBinaryTag.of(foreign.getAsString());
+            return LinStringTag.of(foreign.getAsString());
         } else if (foreign instanceof net.minecraft.nbt.EndTag) {
-            return EndBinaryTag.get();
-        } else {
-            throw new IllegalArgumentException("Don't know how to make native " + foreign.getClass().getCanonicalName());
+            return LinEndTag.instance();
         }
+        throw new IllegalArgumentException("Don't know how to make native " + foreign.getClass().getCanonicalName());
     }
 
     /**
@@ -946,17 +1006,19 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      *
      * @param foreign the foreign tag
      * @return the converted tag
-     * @throws SecurityException        on error
+     * @throws SecurityException on error
      * @throws IllegalArgumentException on error
      */
-    private ListBinaryTag toNativeList(net.minecraft.nbt.ListTag foreign) throws SecurityException, IllegalArgumentException {
-        ListBinaryTag.Builder values = ListBinaryTag.builder();
+    private LinListTag<?> toNativeLinList(net.minecraft.nbt.ListTag foreign) throws SecurityException, IllegalArgumentException {
+        LinListTag.Builder<LinTag<?>> builder = LinListTag.builder(
+                LinTagType.fromId(LinTagId.fromId(foreign.getElementType()))
+        );
 
         for (net.minecraft.nbt.Tag tag : foreign) {
-            values.add(toNativeBinary(tag));
+            builder.add(toNativeLin(tag));
         }
 
-        return values.build();
+        return builder.build();
     }
 
     /**
@@ -966,44 +1028,43 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
      * @return non-native structure
      */
     @Override
-    public net.minecraft.nbt.Tag fromNativeBinary(BinaryTag foreign) {
+    public net.minecraft.nbt.Tag fromNativeLin(LinTag<?> foreign) {
         if (foreign == null) {
             return null;
         }
-        if (foreign instanceof CompoundBinaryTag) {
+        if (foreign instanceof LinCompoundTag compoundTag) {
             net.minecraft.nbt.CompoundTag tag = new net.minecraft.nbt.CompoundTag();
-            for (String key : ((CompoundBinaryTag) foreign).keySet()) {
-                tag.put(key, fromNativeBinary(((CompoundBinaryTag) foreign).get(key)));
+            for (var entry : compoundTag.value().entrySet()) {
+                tag.put(entry.getKey(), fromNativeLin(entry.getValue()));
             }
             return tag;
-        } else if (foreign instanceof ByteBinaryTag) {
-            return net.minecraft.nbt.ByteTag.valueOf(((ByteBinaryTag) foreign).value());
-        } else if (foreign instanceof ByteArrayBinaryTag) {
-            return new net.minecraft.nbt.ByteArrayTag(((ByteArrayBinaryTag) foreign).value());
-        } else if (foreign instanceof DoubleBinaryTag) {
-            return net.minecraft.nbt.DoubleTag.valueOf(((DoubleBinaryTag) foreign).value());
-        } else if (foreign instanceof FloatBinaryTag) {
-            return net.minecraft.nbt.FloatTag.valueOf(((FloatBinaryTag) foreign).value());
-        } else if (foreign instanceof IntBinaryTag) {
-            return net.minecraft.nbt.IntTag.valueOf(((IntBinaryTag) foreign).value());
-        } else if (foreign instanceof IntArrayBinaryTag) {
-            return new net.minecraft.nbt.IntArrayTag(((IntArrayBinaryTag) foreign).value());
-        } else if (foreign instanceof LongArrayBinaryTag) {
-            return new net.minecraft.nbt.LongArrayTag(((LongArrayBinaryTag) foreign).value());
-        } else if (foreign instanceof ListBinaryTag) {
+        } else if (foreign instanceof LinByteTag byteTag) {
+            return net.minecraft.nbt.ByteTag.valueOf(byteTag.valueAsByte());
+        } else if (foreign instanceof LinByteArrayTag byteArrayTag) {
+            return new net.minecraft.nbt.ByteArrayTag(byteArrayTag.value());
+        } else if (foreign instanceof LinDoubleTag doubleTag) {
+            return net.minecraft.nbt.DoubleTag.valueOf(doubleTag.valueAsDouble());
+        } else if (foreign instanceof LinFloatTag floatTag) {
+            return net.minecraft.nbt.FloatTag.valueOf(floatTag.valueAsFloat());
+        } else if (foreign instanceof LinIntTag intTag) {
+            return net.minecraft.nbt.IntTag.valueOf(intTag.valueAsInt());
+        } else if (foreign instanceof LinIntArrayTag intArrayTag) {
+            return new net.minecraft.nbt.IntArrayTag(intArrayTag.value());
+        } else if (foreign instanceof LinLongArrayTag longArrayTag) {
+            return new net.minecraft.nbt.LongArrayTag(longArrayTag.value());
+        } else if (foreign instanceof LinListTag<?> listTag) {
             net.minecraft.nbt.ListTag tag = new net.minecraft.nbt.ListTag();
-            ListBinaryTag foreignList = (ListBinaryTag) foreign;
-            for (BinaryTag t : foreignList) {
-                tag.add(fromNativeBinary(t));
+            for (var t : listTag.value()) {
+                tag.add(fromNativeLin(t));
             }
             return tag;
-        } else if (foreign instanceof LongBinaryTag) {
-            return net.minecraft.nbt.LongTag.valueOf(((LongBinaryTag) foreign).value());
-        } else if (foreign instanceof ShortBinaryTag) {
-            return net.minecraft.nbt.ShortTag.valueOf(((ShortBinaryTag) foreign).value());
-        } else if (foreign instanceof StringBinaryTag) {
-            return net.minecraft.nbt.StringTag.valueOf(((StringBinaryTag) foreign).value());
-        } else if (foreign instanceof EndBinaryTag) {
+        } else if (foreign instanceof LinLongTag longTag) {
+            return net.minecraft.nbt.LongTag.valueOf(longTag.valueAsLong());
+        } else if (foreign instanceof LinShortTag shortTag) {
+            return net.minecraft.nbt.ShortTag.valueOf(shortTag.valueAsShort());
+        } else if (foreign instanceof LinStringTag stringTag) {
+            return net.minecraft.nbt.StringTag.valueOf(stringTag.value());
+        } else if (foreign instanceof LinEndTag) {
             return net.minecraft.nbt.EndTag.INSTANCE;
         } else {
             throw new IllegalArgumentException("Don't know how to make NMS " + foreign.getClass().getCanonicalName());
@@ -1021,7 +1082,6 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
     }
 
     private class SpigotWatchdog implements Watchdog {
-
         private final Field instanceField;
         private final Field lastTickField;
 
@@ -1046,18 +1106,16 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
                 logger.log(Level.WARNING, "Failed to tick watchdog", e);
             }
         }
-
     }
 
     private static class MojangWatchdog implements Watchdog {
-
         private final DedicatedServer server;
         private final Field tickField;
 
         MojangWatchdog(DedicatedServer server) throws NoSuchFieldException {
             this.server = server;
             Field tickField = MinecraftServer.class.getDeclaredField(
-                    Refraction.pickName("nextTickTime", "ah")
+                Refraction.pickName("nextTickTime", "ag")
             );
             if (tickField.getType() != long.class) {
                 throw new IllegalStateException("nextTickTime is not a long field, mapping is likely incorrect");
@@ -1073,21 +1131,15 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
             } catch (IllegalAccessException ignored) {
             }
         }
-
     }
 
     private static class NoOpWorldLoadListener implements ChunkProgressListener {
-
         @Override
         public void updateSpawnPos(ChunkPos spawnPos) {
         }
 
         @Override
-        public void onStatusChange(
-                final ChunkPos pos,
-                @org.jetbrains.annotations.Nullable final net.minecraft.world.level.chunk.status.ChunkStatus status
-        ) {
-
+        public void onStatusChange(ChunkPos pos, @org.jetbrains.annotations.Nullable ChunkStatus status) {
         }
 
         @Override
@@ -1099,5 +1151,4 @@ public final class PaperweightAdapter implements BukkitImplAdapter<net.minecraft
         }
 
     }
-
 }
